# ratkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  layout-manager-product-plan.md  llms.md  llms.txt
_archives/ratatui-toolkit/: Cargo.toml  README.md
_archives/ratatui-toolkit/examples/: aichat_demo.rs  codediff_demo.rs  markdown_demo.rs
_archives/ratatui-toolkit/examples/showcase/: constants.rs  main.rs
_archives/ratatui-toolkit/examples/showcase/demo_tab/: mod.rs
_archives/ratatui-toolkit/examples/showcase/handlers/: ai_chat_handler.rs  main_loop_handler.rs  markdown_handler.rs  primitives_handler.rs  split_grid_handler.rs  terminal_handler.rs  tree_handler.rs
_archives/ratatui-toolkit/examples/showcase/helpers/: apply_theme.rs  dialog.rs  get_theme_name.rs
_archives/ratatui-toolkit/examples/showcase/render/: render_ai_chat_demo.rs  render_split_layout_grid_demo.rs  render_terminal_demo.rs  render_theme_picker.rs  render_trees_demo.rs
_archives/ratatui-toolkit/src/: lib.rs
_archives/ratatui-toolkit/src/primitives/: border_style_helper.rs
_archives/ratatui-toolkit/src/primitives/button/: core.rs  mod.rs
_archives/ratatui-toolkit/src/primitives/dialog/: mod.rs
_archives/ratatui-toolkit/src/primitives/menu_bar/: menu_bar.rs
_archives/ratatui-toolkit/src/primitives/pane/: rendering.rs
_archives/ratatui-toolkit/src/primitives/resizable_grid/: builders.rs  layout.rs
_archives/ratatui-toolkit/src/services/: mod.rs
_archives/ratatui-toolkit/src/widgets/: mod.rs
_archives/termtui/: Cargo.toml
_archives/termtui/examples/: termtui_demo.rs
_archives/termtui/src/: grid.rs  lib.rs  row.rs  screen.rs  widget.rs
_archives/termtui/src/keybindings/: mod.rs
_archives/termtui/tests/: termtui_demo_portable_pty_e2e.rs
crates/archives/: Cargo.toml
crates/example-runner/: Cargo.toml
crates/example-runner/examples/: basic.rs
crates/example-runner/src/: lib.rs
crates/markdown-viewer/: Cargo.toml  README.md
crates/markdown-viewer/examples/: viewer_demo.rs
crates/markdown-viewer/src/: config.rs  event.rs  lib.rs  markdown_panel.rs  persistence.rs  resizable_panes.rs  state.rs  viewer.rs
crates/primitives/button/: Cargo.toml
crates/primitives/button/examples/: button_demo.rs
crates/primitives/button/src/: lib.rs  render.rs  widget.rs
crates/primitives/button/tests/: button_demo_e2e.rs  button_demo_portable_pty_e2e.rs  button_demo_termwright_e2e.rs
crates/primitives/dialog/: Cargo.toml
crates/primitives/dialog/examples/: dialog_demo.rs
crates/primitives/dialog/src/: builders.rs  lib.rs  methods.rs  render.rs
crates/primitives/menu-bar/: Cargo.toml
crates/primitives/menu-bar/examples/: menu_bar_demo.rs
crates/primitives/menu-bar/src/: menu_bar.rs
crates/primitives/pane/: Cargo.toml
crates/primitives/pane/examples/: pane_demo.rs
crates/primitives/pane/src/: constructors.rs  methods.rs  rendering.rs
crates/primitives/resizable-grid/: Cargo.toml
crates/primitives/resizable-grid/examples/: resizable_grid_demo.rs
crates/primitives/resizable-grid/src/: builders.rs  layout.rs  operations.rs  widget.rs
crates/primitives/scroll/: Cargo.toml
crates/primitives/scroll/examples/: scroll_demo.rs
crates/primitives/scroll/src/: lib.rs
crates/primitives/statusline/: Cargo.toml
crates/primitives/statusline/examples/: statusline_demo.rs
crates/primitives/termtui/: Cargo.toml
crates/primitives/termtui/examples/: term_mprocs_demo.rs  termtui_demo.rs
crates/primitives/termtui/src/: cell.rs  copy_mode.rs  grid.rs  io.rs  lib.rs  parser.rs  screen.rs
crates/primitives/termtui/tests/: term_mprocs_demo_portable_pty_e2e.rs
crates/primitives/toast/: Cargo.toml
crates/primitives/toast/examples/: toast_demo.rs
crates/primitives/tree-view/: Cargo.toml
crates/primitives/tree-view/examples/: tree_view_demo.rs
crates/primitives/widget-event/: Cargo.toml
crates/primitives/widget-event/examples/: widget_event_demo.rs
crates/primitives/widget-event/src/: lib.rs
crates/ratkit/: Cargo.toml
crates/ratkit/examples/: file_system_tree_file_system_tree_demo.rs  git_watcher_demo.rs  hotkey_footer_hotkey_footer_demo.rs  menu-bar_menu_bar_demo.rs  mouse_only.rs  ratkit_demo.rs  resizable-grid_resizable_grid_demo.rs  toast_toast_demo.rs
crates/ratkit/src/: coordinator.rs  error.rs  lib.rs  redraw_signal.rs  registry.rs  runner_helper.rs  types.rs
crates/ratkit/src/core/: mod.rs  runner.rs
crates/ratkit/src/primitives/: mod.rs
crates/ratkit/src/services/: mod.rs
crates/services/file-watcher/: Cargo.toml  README.md
crates/services/file-watcher/examples/: file_watcher_demo.rs
crates/services/file-watcher/src/: lib.rs
crates/services/git-watcher/: Cargo.toml  README.md
crates/services/git-watcher/examples/: git_watcher_demo.rs
crates/services/git-watcher/src/: lib.rs
crates/services/hotkey-service/: Cargo.toml  README.md
crates/services/hotkey-service/examples/: hotkey_service_demo.rs
crates/services/hotkey-service/src/: hotkey_scope.rs  lib.rs
crates/services/repo-watcher/: Cargo.toml  README.md
crates/services/repo-watcher/examples/: repo_watcher_demo.rs
crates/services/repo-watcher/src/: lib.rs
crates/widgets/ai-chat/: Cargo.toml
crates/widgets/ai-chat/examples/: ai_chat_demo.rs
crates/widgets/ai-chat/src/: ai_chat.rs  input.rs
crates/widgets/code-diff/: Cargo.toml
crates/widgets/code-diff/examples/: code_diff_demo.rs
crates/widgets/file-system-tree/: Cargo.toml
crates/widgets/file-system-tree/examples/: file_system_tree_demo.rs
crates/widgets/file-system-tree/src/: config.rs  entry.rs  lib.rs  state.rs  tree_node.rs  widget.rs
crates/widgets/markdown-preview/: Cargo.toml
crates/widgets/markdown-preview/examples/: markdown_preview_demo.rs
crates/widgets/markdown-preview/src/: foundation.rs  lib.rs  state.rs
crates/widgets/markdown-preview/tests/: demo_md_mouse.rs
crates/widgets/theme-picker/: Cargo.toml
crates/widgets/theme-picker/examples/: theme_picker_demo.rs
crates/widgets/theme-picker/src/: builtin_themes.rs  lib.rs  picker.rs  state.rs  theme_colors.rs
(+2613 files in other folders)
