[workspace]
resolver = "2"
members = [
    # Legacy crates archived - see _archives/ directory
    # "crates/ratatui-toolkit",
    # "crates/archives",
    
    # Primitives (12 crates)
    "crates/primitives/button",
    "crates/primitives/pane",
    "crates/primitives/dialog",
    "crates/primitives/toast",
    "crates/primitives/statusline",
    "crates/primitives/scroll",
    "crates/primitives/menu-bar",
    "crates/primitives/resizable-grid",
    "crates/primitives/tree-view",
    "crates/primitives/widget-event",
    "crates/primitives/termtui",
    
    # Widgets (6 crates)
    "crates/widgets/markdown-preview",
    "crates/widgets/code-diff",
    "crates/widgets/ai-chat",
    "crates/widgets/hotkey-footer",
    "crates/widgets/file-system-tree",
    "crates/widgets/theme-picker",
    
    # Services (4 crates)
    "crates/services/file-watcher",
    "crates/services/git-watcher",
    "crates/services/repo-watcher",
    "crates/services/hotkey-service",
    
    # Meta-crate
    "crates/ratkit",
]

[workspace.package]
version = "0.1.16"
edition = "2021"
rust-version = "1.70"
authors = ["Alpha Innovation Labs"]
license = "MIT"
repository = "https://github.com/alpha-innovation-labs/ratatui-toolkit"
homepage = "https://github.com/alpha-innovation-labs/ratatui-toolkit"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
