[workspace]
resolver = "2"
members = [
    # Single consolidated ratkit crate
    "crates/ratkit",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
authors = ["Alpha Innovation Labs"]
license = "MIT"
repository = "https://github.com/alpha-innovation-labs/ratatui-toolkit"
homepage = "https://github.com/alpha-innovation-labs/ratatui-toolkit"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
