[package]
name = "ratkit-termtui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Terminal embedding for ratatui"
documentation = "https://docs.rs/ratkit-termtui"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "terminal", "embed", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true

anyhow = "1.0"
termwiz = "0.23"
unicode-width = "0.1"
libc = "0.2"
arboard = "3"
base64 = "0.22"
portable-pty = "0.9"

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
strip-ansi-escapes = "0.2"
