[package]
name = "ratkit-example-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Shared terminal runner for ratkit examples"
documentation = "https://docs.rs/ratkit-example-runner"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "terminal", "examples", "runner"]
categories = ["command-line-interface"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
