[package]
name = "markdown-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A full-featured markdown viewer application component for ratatui-toolkit"
documentation = "https://docs.rs/markdown-viewer"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "markdown", "viewer", "terminal"]
categories = ["command-line-interface", "gui"]
readme = "README.md"

[dependencies]
# Core dependencies (workspace)
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# ratatui-toolkit (local workspace dependency)
ratatui-toolkit = { version = "0.1.11", path = "../ratatui-toolkit", features = ["markdown", "file-tree", "theme"] }

# Additional dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "viewer_demo"
path = "examples/viewer_demo.rs"
