[package]
name = "ratkit"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core runtime meta-crate re-exporting ratkit TUI components."
documentation = "https://docs.rs/ratkit"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "widgets", "ui"]
categories = ["command-line-interface", "gui"]

[dependencies]
# Core UI widgets (primitives)
ratkit-button = { path = "../primitives/button", version = "0.2", optional = true }
ratkit-pane = { path = "../primitives/pane", version = "0.2", optional = true }
ratkit-dialog = { path = "../primitives/dialog", version = "0.2", optional = true }
ratkit-toast = { path = "../primitives/toast", version = "0.2", optional = true }
ratkit-statusline = { path = "../primitives/statusline", version = "0.2", optional = true }
ratkit-scroll = { path = "../primitives/scroll", version = "0.2", optional = true }
ratkit-menu-bar = { path = "../primitives/menu-bar", version = "0.2", optional = true }
ratkit-resizable-grid = { path = "../primitives/resizable-grid", version = "0.2", optional = true }
ratkit-tree-view = { path = "../primitives/tree-view", version = "0.2", optional = true }
ratkit-widget-event = { path = "../primitives/widget-event", version = "0.2", optional = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Advanced widgets
ratkit-markdown-preview = { path = "../widgets/markdown-preview", version = "0.2", optional = true }
ratkit-code-diff = { path = "../widgets/code-diff", version = "0.2", optional = true }
ratkit-ai-chat = { path = "../widgets/ai-chat", version = "0.2", optional = true }
ratkit-hotkey-footer = { path = "../widgets/hotkey-footer", version = "0.2", optional = true }
ratkit-file-system-tree = { path = "../widgets/file-system-tree", version = "0.2", optional = true }
ratkit-theme-picker = { path = "../widgets/theme-picker", version = "0.2", optional = true }

# Services
ratkit-file-watcher = { path = "../services/file-watcher", version = "0.2", optional = true }
ratkit-git-watcher = { path = "../services/git-watcher", version = "0.2", optional = true }
ratkit-repo-watcher = { path = "../services/repo-watcher", version = "0.2", optional = true }
ratkit-hotkey-service = { path = "../services/hotkey-service", version = "0.2", optional = true }

[features]
default = []

all = [
    "button",
    "pane",
    "dialog",
    "toast",
    "statusline",
    "scroll",
    "menu-bar",
    "resizable-grid",
    "tree-view",
    "widget-event",
    "markdown-preview",
    "code-diff",
    "ai-chat",
    "hotkey-footer",
    "file-system-tree",
    "theme-picker",
    "file-watcher",
    "git-watcher",
    "repo-watcher",
    "hotkey-service",
]

full = ["all"]

# Widget feature groups
widgets = [
    "button",
    "pane",
    "dialog",
    "toast",
    "statusline",
    "scroll",
    "menu-bar",
    "resizable-grid",
    "tree-view",
    "widget-event",
    "markdown-preview",
    "code-diff",
    "ai-chat",
    "hotkey-footer",
    "file-system-tree",
    "theme-picker",
]

services = [
    "file-watcher",
    "git-watcher",
    "repo-watcher",
    "hotkey-service",
]

# Individual widget features
button = ["ratkit-button"]
pane = ["ratkit-pane"]
dialog = ["ratkit-dialog"]
toast = ["ratkit-toast"]
statusline = ["ratkit-statusline"]
scroll = ["ratkit-scroll"]
menu-bar = ["ratkit-menu-bar"]
resizable-grid = ["ratkit-resizable-grid"]
tree-view = ["ratkit-tree-view"]
widget-event = ["ratkit-widget-event"]
markdown-preview = ["ratkit-markdown-preview"]
code-diff = ["ratkit-code-diff"]
ai-chat = ["ratkit-ai-chat"]
hotkey-footer = ["ratkit-hotkey-footer"]
file-system-tree = ["ratkit-file-system-tree"]
theme-picker = ["ratkit-theme-picker"]
file-watcher = ["ratkit-file-watcher"]
git-watcher = ["ratkit-git-watcher"]
repo-watcher = ["ratkit-repo-watcher"]
hotkey-service = ["ratkit-hotkey-service"]

[dev-dependencies]
ratatui.workspace = true
crossterm.workspace = true
ratkit-button = { path = "../primitives/button", version = "0.2" }
ratkit-pane = { path = "../primitives/pane", version = "0.2" }

[[example]]
name = "ratkit_demo"
required-features = ["button", "pane"]

[[example]]
name = "mouse_only"
