[package]
name = "ratkit-button"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Button widget for ratatui"
documentation = "https://docs.rs/ratkit-button"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "button", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
ratatui-testlib = "0.1"
portable-pty = "0.8"
termwright = "0.2"
