[package]
name = "ratkit-menu-bar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Menu bar widget for ratatui"
documentation = "https://docs.rs/ratkit-menu-bar"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "menu", "menubar", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
unicode-width.workspace = true
anyhow.workspace = true

ratkit-widget-event = { path = "../../primitives/widget-event" }

crossterm.workspace = true

[dev-dependencies]
ratkit-example-runner.workspace = true
ratatui.workspace = true
crossterm.workspace = true
