[package]
name = "ratkit-pane"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Pane/container widget for ratatui"
documentation = "https://docs.rs/ratkit-pane"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "pane", "container", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true

