[package]
name = "ratkit-resizable-grid"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Resizable grid layouts for ratatui"
documentation = "https://docs.rs/ratkit-resizable-grid"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "grid", "resizable", "layout", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
ratatui.workspace = true
crossterm.workspace = true
ratkit = { path = "../../ratkit" }
