[package]
name = "ratkit-scroll"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Scroll utilities for ratatui"
documentation = "https://docs.rs/ratkit-scroll"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "scroll", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]

[features]
default = []

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
