[package]
name = "ratkit-statusline"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Status bar widget for ratatui"
documentation = "https://docs.rs/ratkit-statusline"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "statusbar", "status", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
