[package]
name = "ratkit-termtui"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "VT100 terminal emulation extracted from mprocs"
documentation = "https://docs.rs/ratkit-termtui"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "terminal", "vt100", "emulator"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
unicode-width.workspace = true
unicode-segmentation = "1.12.0"
compact_str = "0.9.0"
serde = { version = "1", features = ["derive"] }
log = "0.4"

[dev-dependencies]
anyhow.workspace = true
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
