[package]
name = "ratkit-file-watcher"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "File watching service for detecting file system changes in ratkit"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "file-watcher", "notify"]
categories = ["command-line-interface", "filesystem"]

[dependencies]
notify = "6"

[dev-dependencies]
tempfile = "3"
ratkit-example-runner.workspace = true
ratatui.workspace = true
crossterm.workspace = true
