[package]
name = "ratkit-file-system-tree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "File system tree view for ratatui"
documentation = "https://docs.rs/ratkit-file-system-tree"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "file", "tree", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

devicons = "0.6"
