[package]
name = "ratkit-markdown-preview"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Markdown rendering widget for ratatui"
documentation = "https://docs.rs/ratkit-markdown-preview"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "markdown", "preview", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
pulldown-cmark = "0.12"
syntect = "5"
syntect-tui = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
arboard = "3"
dirs = "5"
ratkit-pane = { path = "../../primitives/pane" }
ratkit-statusline = { path = "../../primitives/statusline" }
ratkit-git-watcher = { path = "../../services/git-watcher" }
ratkit-file-watcher = { path = "../../services/file-watcher" }

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true
tempfile = "3"

[features]
default = ["markdown"]
markdown = []
