[package]
name = "ratkit-theme-picker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Theme picker widget for ratatui"
documentation = "https://docs.rs/ratkit-theme-picker"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["tui", "ratatui", "theme", "picker", "widget"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
ratkit = { path = "../../ratkit" }
ratatui.workspace = true
crossterm.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
